// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Button Button primary with size modified 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 24px;
  line-height: 20px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 40px;
  line-height: 36px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:360px) {
  .c4 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

@media (min-width:360px) {
  .c7 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Small
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        size="s"
        type="button"
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          Small
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Medium
    </div>
    <div>
      <button
        className="c5"
        onClick={[Function]}
        size="m"
        type="button"
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          Medium
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Large
    </div>
    <div>
      <button
        className="c6"
        onClick={[Function]}
        size="l"
        type="button"
      >
        <span
          className="c7"
          color="inherit"
          type="primary"
        >
          Large
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button secondary with size modified 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  box-sizing: border-box;
  border: 2px solid #0046FF;
  color: #0046FF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  box-sizing: border-box;
  border: 2px solid #0046FF;
  color: #0046FF;
  height: 24px;
  line-height: 20px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  box-sizing: border-box;
  border: 2px solid #0046FF;
  color: #0046FF;
  height: 40px;
  line-height: 36px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:360px) {
  .c4 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

@media (min-width:360px) {
  .c7 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Small
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        size="s"
        type="button"
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          Small
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Medium
    </div>
    <div>
      <button
        className="c5"
        onClick={[Function]}
        size="m"
        type="button"
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          Medium
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Large
    </div>
    <div>
      <button
        className="c6"
        onClick={[Function]}
        size="l"
        type="button"
      >
        <span
          className="c7"
          color="inherit"
          type="primary"
        >
          Large
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button that is full width 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: block;
  width: 100%;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:360px) {
  .c1 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <span
    className="c1"
    color="inherit"
    type="secondary"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Button with type modified 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:360px) {
  .c4 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Reset
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="reset"
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          Reset
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Submit
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="submit"
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with variant 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  box-sizing: border-box;
  border: 2px solid #0046FF;
  color: #0046FF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:360px) {
  .c1 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <span
    className="c1"
    color="inherit"
    type="secondary"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Buttons composed in a group 1`] = `
.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
  padding-left: 10px;
  padding-right: 10px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: block;
  width: 100%;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  background-color: hsl(223.5,100%,45%);
}

.c2:active {
  background-color: hsl(223.5,100%,40%);
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  box-sizing: border-box;
  border: 2px solid #0046FF;
  color: #0046FF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: block;
  width: 100%;
  border-radius: 0;
  cursor: pointer;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c4:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:360px) {
  .c3 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      onClick={[Function]}
      type="submit"
    >
      <span
        className="c3"
        color="inherit"
        type="secondary"
      >
        Submit
      </span>
    </button>
  </div>
  <div
    className="c1"
  >
    <button
      className="c4"
      onClick={[Function]}
      type="reset"
    >
      <span
        className="c3"
        color="inherit"
        type="secondary"
      >
        Reset
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Default usage 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:360px) {
  .c1 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <span
    className="c1"
    color="inherit"
    type="secondary"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Disabled button 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #A0A09B;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

@media (min-width:360px) {
  .c1 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="c1"
    color="inherit"
    type="secondary"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Link looking like a button 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c5 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  border: 2px solid #0046FF;
  color: #0046FF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:360px) {
  .c4 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Reset
    </div>
    <div>
      <a
        className="c3"
        href="#/route1"
        onClick={[Function]}
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          To Route1
        </span>
      </a>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Submit
    </div>
    <div>
      <a
        className="c5"
        href="#/route2"
        onClick={[Function]}
        variant="secondary"
      >
        <span
          className="c4"
          color="inherit"
          type="secondary"
        >
          To Route2
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Link looking like a button that is full width 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: block;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:360px) {
  .c1 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<a
  className="c0"
  fullWidth={true}
  href="#/www.google.com"
  onClick={[Function]}
>
  <span
    className="c1"
    color="inherit"
    type="secondary"
  >
    Button
  </span>
</a>
`;

exports[`Storyshots Molecules | Button Link looking like a button with rel as nofollow 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: block;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:360px) {
  .c1 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<a
  className="c0"
  fullWidth={true}
  href="#/www.google.com"
  onClick={[Function]}
  rel="nofollow"
>
  <span
    className="c1"
    color="inherit"
    type="secondary"
  >
    Button
  </span>
</a>
`;

exports[`Storyshots Molecules | Button Link looking like a buttons composed in a group 1`] = `
.c1 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c2 {
  background-color: #0046FF;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #FFFFFF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: block;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c2:hover {
  background-color: hsl(223.5,100%,45%);
}

.c2:active {
  background-color: hsl(223.5,100%,40%);
}

.c4 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  border: 2px solid #0046FF;
  color: #0046FF;
  height: 32px;
  line-height: 28px;
  padding: 0 8px;
  display: block;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c4:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c4:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:360px) {
  .c3 {
    font-size: 14px;
    line-height: 1.7142857142857142;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      fullWidth={true}
      href="#/route1"
      onClick={[Function]}
    >
      <span
        className="c3"
        color="inherit"
        type="secondary"
      >
        Submit
      </span>
    </a>
  </div>
  <div
    className="c1"
  >
    <a
      className="c4"
      fullWidth={true}
      href="#/route2"
      onClick={[Function]}
      variant="secondary"
    >
      <span
        className="c3"
        color="inherit"
        type="secondary"
      >
        Reset
      </span>
    </a>
  </div>
</div>
`;
